<resources>
    <string name="app_name">Beacons for Production</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="WZL" translatable="false">WZL</string>
    <string name="orders">Orders</string>
    <string name="machines">Machines</string>
    <string name="ordersInReach">Orders in reach</string>
    <string name="otherOrders">Other orders</string>
    <string name="machinesInReach">Machines in reach</string>
    <string name="otherMachines">Other machines</string>
    <string name="beaconsForProduction">Beacons for Production</string>
    <string name="orderDetails">Order details</string>
    <string name="machineDetails">Machine details</string>
    <string name="beacon">Beacon</string>
    <string name="orderID">Order ID</string>
    <string name="machineID">Machine ID</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="dueDate">Due date</string>
    <string name="databaseMachine">Machine from database</string>
    <string name="scanMachine">Machine from scan</string>
    <string name="newOrder">New Order</string>
    <string name="newMachine">New Machine</string>
    <string name="pickDueDate">pick a due date</string>
    <string name="save">Save</string>
    <string name="userSettings">User Settings</string>
    <string name="logout">Logout</string>
    <string name="distance">Distance in meter</string>
    <string name="filler">filler</string>
    <string name="company">Company</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="lastName">Last name</string>
    <string name="firstName">First name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="passwordRepeat">Repeat password</string>
    <string name="noConnection">No Internet Connection</string>
    <string name="edit">Edit</string>
    <string name="saved">saved</string>
    <string name="undo">Undo</string>
    <string name="undone">Delete</string>
    <string name="noEnoughInformation">Not enough information entered</string>
    <string-array name="units">
        <item>meter</item>
        <item>feet</item>
    </string-array>
</resources>
