<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <TableLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
        <TableRow
            android:layout_width="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/orderDetails"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/beacon"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/detailViewBeacon"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/orderID"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/detailViewID"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/name"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/detailViewName"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/description"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/detailViewDescription"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/dueDate"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/detailViewDate"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                android:text="@string/databaseMachine"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/detailViewDatabaseMachine"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                android:text="@string/scanMachine"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/detailViewScanMachine"/>
        </TableRow>
    </TableLayout>
</LinearLayout>